Changed index template

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Hello World, this is my index template</h1>
+<h1>Hello World, this is my Home page</h1>
 <h4>And how are you, {{ name }}?</h4>
 
 {% endblock content %}
